--- a/src/main/webapp/partials/inventory-add.html
+++ b/src/main/webapp/partials/inventory-add.html
@@ -1,3 +1,3 @@
 <form class="form-horizontal" role="form" ng-submit="addVehicle()">
-    <div ng-include="'static/partials/inventory-form.html'"></div>
+    <div ng-include="'partials/inventory-form.html'"></div>
 </form>
