--- a/src/main/webapp/partials/inventory.html
+++ b/src/main/webapp/partials/inventory.html
@@ -41,7 +41,7 @@
         </div>
         <div class="panel-body">
         
-        <img src="static/img/{{vehicle.type}}.png" alt="{{vehicle.type}}" class=" img-rounded">
+        <img src="img/{{vehicle.type}}.png" alt="{{vehicle.type}}" class=" img-rounded">
         
         
         
